# azurite-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmark/: benchmark.py
src/: config.rs  context.rs  error.rs  lib.rs  main.rs  router.rs  server.rs
src/auth/: account_sas.rs  blob_sas.rs  middleware.rs  mod.rs  shared_key.rs
src/handlers/: append_blob.rs  batch.rs  blob.rs  block_blob.rs  container.rs  mod.rs  page_blob.rs  service.rs
src/models/: blob.rs  block.rs  container.rs  mod.rs  page.rs  service.rs
src/storage/: extent.rs  gc.rs  metadata.rs  mod.rs
src/xml/: deserialize.rs  mod.rs  serialize.rs
tests/: azure_sdk_tests.rs  blob_tests.rs  block_blob_tests.rs  clickhouse_compat.rs  container_tests.rs
tests/common/: mod.rs
tests/python/: conftest.py  requirements.txt  test_azure_sdk.py  test_batch.py
